disabling the previous button in pagination

--- a/pkg/components/pagination/pagination.templ
+++ b/pkg/components/pagination/pagination.templ
@@ -44,6 +44,11 @@ type PaginationProps struct {
 	PreviousButtonOptions PreviousButtonOptions
 }
 
+func (pc *PaginationProps) IsPreviousButtonDisabled() bool { 
+	return pc.PageConditions.CurrentPage == 1 || pc.PreviousButtonOptions.IsDisabled
+}
+
+
 func (pp PaginationProps) BuildClassName() (classes string) {
 	classNames := []string{RootClassName} 
 
@@ -55,10 +60,10 @@ func (pp PaginationProps) BuildClassName() (classes string) {
 templ Show(props PaginationProps) {
 	<nav aria-label="Pagination">
 		<ul class={ props.BuildClassName() }>
-			if props.PreviousButtonOptions.ShouldPersist {
+			if props.PreviousButtonOptions.ShouldPersist  {
 				@paginationitem.Show(paginationitem.PaginationItemProps{
 					ElementProps: base.ElementProps{
-						IsDisabled: props.PreviousButtonOptions.IsDisabled,
+						IsDisabled: props.IsPreviousButtonDisabled(),
 					},
 					IsActive: false,
 					AriaLabel: "Visit the previous page",
