testing htmx support for pagination - WIP

--- a/pkg/components/pagination/pagination.templ
+++ b/pkg/components/pagination/pagination.templ
@@ -37,11 +37,16 @@ type PreviousButtonOptions struct {
 	IsDisabled bool
 }
 
+type PaginationItemsProps struct {
+	HTMXAttributes *base.HTMXProps
+}
+
 type PaginationProps struct {
 	base.ElementProps
 	Alignment AlignmentType
 	PageConditions PageConditions
 	PreviousButtonOptions PreviousButtonOptions
+	PaginationItemsProps PaginationItemsProps
 }
 
 func (pc *PaginationProps) IsPreviousButtonDisabled() bool { 
@@ -55,6 +60,15 @@ func (pp PaginationProps) BuildClassName() (classes string) {
 	classes = strings.Join(classNames, " ")
 
 	return
+}
+
+func (pp PaginationProps) GetHTMXAttributesForItems() base.HTMXProps {
+
+	if pp.PaginationItemsProps.HTMXAttributes != nil {
+		return *pp.PaginationItemsProps.HTMXAttributes
+	}
+
+	return base.HTMXProps{}
 }
 
 templ Show(props PaginationProps) {
@@ -75,6 +89,7 @@ templ Show(props PaginationProps) {
 				@paginationitem.Show(paginationitem.PaginationItemProps{
 					ElementProps: base.ElementProps{
 						IsDisabled: props.PageConditions.IsPageDisabled(iLoopA),
+						HTMX: props.GetHTMXAttributesForItems(),
 					},
 					IsActive: props.PageConditions.IsCurrentPage(iLoopA),
 					AriaLabel: fmt.Sprintf("Go to page %d", iLoopA),
