--- a/pkg/components/pagination/pagination.templ
+++ b/pkg/components/pagination/pagination.templ
@@ -70,6 +70,8 @@ func (pp PaginationProps) GetElementPropsForItem(pageNumber int) base.ElementPro
 
 	elementProps.IsDisabled = pp.PageConditions.IsPageDisabled(pageNumber)
 
+	elementProps.ExtraAttributes["hx-get"] = fmt.Sprintf(elementProps.ExtraAttributes["hx-get"].(string), pageNumber )
+
 	return elementProps
 }
  
