--- a/pkg/components/pagination/pagination.templ
+++ b/pkg/components/pagination/pagination.templ
@@ -5,6 +5,7 @@ import (
 	"strings"
 	"fmt" 
 	"github.com/chrisbward/templstrap.io/pkg/components/pagination/paginationitem"
+	"github.com/sirupsen/logrus"
 )
 
 const RootClassName = "pagination"
@@ -70,7 +71,10 @@ func (pp PaginationProps) GetElementPropsForItem(pageNumber int) base.ElementPro
 
 	elementProps.IsDisabled = pp.PageConditions.IsPageDisabled(pageNumber)
 
-	elementProps.ExtraAttributes["hx-get"] = fmt.Sprintf(elementProps.ExtraAttributes["hx-get"].(string), pageNumber )
+	hxGetFormattedString := elementProps.ExtraAttributes["hx-get"].(string)
+	logrus.Infoln(hxGetFormattedString)
+
+	elementProps.ExtraAttributes["hx-get"] = fmt.Sprintf(hxGetFormattedString, pageNumber )
 	elementProps.HTMX.ReplaceURL =  fmt.Sprintf(elementProps.HTMX.ReplaceURL, pageNumber )
 
 	return elementProps
