support for additional classnames in pagination and pagination items

--- a/pkg/components/pagination/pagination.templ
+++ b/pkg/components/pagination/pagination.templ
@@ -59,6 +59,10 @@ func (pc *PaginationProps) IsPreviousButtonDisabled() bool {
 func (pp PaginationProps) BuildClassName() (classes string) {
 	classNames := []string{RootClassName} 
 
+    if pp.AdditionalClasses != nil {
+		classNames = append(classNames, pp.AdditionalClasses...)
+	}
+
 	classes = strings.Join(classNames, " ")
 
 	return
