addition of callback url for rebuilding querystrings on pagination

--- a/pkg/components/pagination/pagination.templ
+++ b/pkg/components/pagination/pagination.templ
@@ -40,7 +40,6 @@ type PaginationButtonOptions struct {
 
 type PaginationItemsProps struct {
 	base.ElementProps
-
 	// HTMXAttributes *base.HTMXProps
 }
 
@@ -71,6 +70,28 @@ type PaginationProps struct {
 	PageConditions PageConditions
 	PaginationContolsOptions PaginationContolsOptions
 	PaginationItemsProps PaginationItemsProps
+	BuildURLCallback *func(desiredPage int) string
+}
+
+type PaginationPageReferenceType int
+
+var (
+	PreviousPagePaginationPageReferenceType = -1
+	NextPagePaginationPageReferenceType = 0
+)
+
+// ReconstructURL - useful for rebuilding querystrings via model
+func (pp *PaginationProps) ReconstructURL(desiredPageNumber int) string {
+	if desiredPageNumber == PreviousPagePaginationPageReferenceType {
+		desiredPageNumber = pp.PageConditions.CurrentPage - 1
+	}
+	if desiredPageNumber == NextPagePaginationPageReferenceType {
+		desiredPageNumber = pp.PageConditions.CurrentPage + 1
+	}
+	if pp.BuildURLCallback == nil {
+		return fmt.Sprintf("?hasPagination=true&page=%d",desiredPageNumber)
+	}
+	return (*pp.BuildURLCallback)(desiredPageNumber)
 }
 
 func (pc *PaginationProps) IsPreviousButtonDisabled() bool { 
@@ -126,7 +147,7 @@ templ Show(props PaginationProps) {
 					IsActive: false,
 					AriaLabel: "Visit the previous page",
 					Content: props.PaginationContolsOptions.GetPreviousButtonContent(),
-					BuiltURL: "#",
+					BuiltURL: props.ReconstructURL(PreviousPagePaginationPageReferenceType),
 				})
 			}
 			for iLoopA := 1; iLoopA < props.PageConditions.TotalPageCount+1; iLoopA++ { 
@@ -135,7 +156,7 @@ templ Show(props PaginationProps) {
 					IsActive: props.PageConditions.IsCurrentPage(iLoopA),
 					AriaLabel: fmt.Sprintf("Go to page %d", iLoopA),
 					Content: fmt.Sprintf("%d", iLoopA),
-					BuiltURL: "#",
+					BuiltURL: props.ReconstructURL(iLoopA),
 				})
 			}
 			if props.PageConditions.HasNextPage() {
@@ -146,7 +167,7 @@ templ Show(props PaginationProps) {
 					IsActive: false,
 					AriaLabel: "Visit the next page",
 					Content: props.PaginationContolsOptions.GetNextButtonContent(),
-					BuiltURL: "#",
+					BuiltURL: props.ReconstructURL(NextPagePaginationPageReferenceType),
 				})
 			}
 		</ul>
