--- a/pkg/components/pagination/pagination.templ
+++ b/pkg/components/pagination/pagination.templ
@@ -5,6 +5,7 @@ import (
 	"strings"
 	"fmt" 
 	"github.com/chrisbward/templstrap.io/pkg/components/pagination/paginationitem"
+	"github.com/sirupsen/logrus"
 )
 
 const RootClassName = "pagination"
@@ -126,6 +127,8 @@ func (pp PaginationProps) GetElementPropsForItem(pageNumber int) base.ElementPro
 
 	newHTMXAttributes := elementProps.HTMX
 	newHTMXAttributes.ReplaceURL =  fmt.Sprintf(elementProps.HTMX.ReplaceURL, pageNumber )
+
+	logrus.Infoln("SETTING NEW REPLACEURL", newHTMXAttributes.ReplaceURL)
 
 	return base.ElementProps{
 		ExtraAttributes: newExtraAttributes,
