--- a/pkg/components/pagination/paginationitem/paginationitem.templ
+++ b/pkg/components/pagination/paginationitem/paginationitem.templ
@@ -2,6 +2,7 @@ package paginationitem
 
 import "github.com/chrisbward/templstrap.io/pkg/base"
 import "strings"
+import "github.com/sirupsen/logrus"
 
 type PaginationItemProps struct {
 	base.ElementProps
@@ -33,6 +34,7 @@ func (pp PaginationItemProps) BuildClassName(isActive bool, isDisabled bool) (cl
 }
 
 func (pp PaginationItemProps) RebuildHTMXAttributes() (htmxAttributes map[string]any) {
+    logrus.Infoln("REBUILT URL", pp.BuiltURL)
 
     htmxAttributes = pp.HTMX.GetAttributes()
     htmxAttributes["hx-replace-url"] = templ.SafeURL(pp.BuiltURL)
