--- a/pkg/components/pagination/paginationitem/paginationitem.templ
+++ b/pkg/components/pagination/paginationitem/paginationitem.templ
@@ -34,10 +34,10 @@ func (pp PaginationItemProps) BuildClassName(isActive bool, isDisabled bool) (cl
 }
 
 func (pp PaginationItemProps) RebuildHTMXAttributes() (htmxAttributes map[string]any) {
-    logrus.Infoln("REBUILT URL", pp.BuiltURL)
 
     htmxAttributes = pp.HTMX.GetAttributes()
     htmxAttributes["hx-replace-url"] = templ.SafeURL(pp.BuiltURL)
+    logrus.Infoln("hx-replace-url value", htmxAttributes["hx-replace-url"])
 
     return 
 }
