--- a/pkg/components/pagination/paginationitem/paginationitem.templ
+++ b/pkg/components/pagination/paginationitem/paginationitem.templ
@@ -34,11 +34,13 @@ func (pp PaginationItemProps) BuildClassName(isActive bool, isDisabled bool) (cl
 }
 
 func (pp PaginationItemProps) RebuildHTMXAttributes() (htmxAttributes map[string]any) {
+    // pp.HTMX.ReplaceURL = pp.BuiltURL 
+    
     htmxAttributes = make(map[string]any)
     for k, v := range pp.HTMX.GetAttributes() {
 		htmxAttributes[k] = v
 	}
-    htmxAttributes["hx-replace-url"] = templ.SafeURL(pp.BuiltURL)
+    htmxAttributes["hx-replace-url"] = pp.BuiltURL 
     logrus.Infoln("hx-replace-url value", htmxAttributes["hx-replace-url"])
 
     return 
