--- a/pkg/components/pagination/pagination.templ
+++ b/pkg/components/pagination/pagination.templ
@@ -5,7 +5,6 @@ import (
 	"strings"
 	"fmt" 
 	"github.com/chrisbward/templstrap.io/pkg/components/pagination/paginationitem"
-	"github.com/sirupsen/logrus"
 )
 
 const RootClassName = "pagination"
@@ -122,17 +121,11 @@ func (pp PaginationProps) GetElementPropsForItem(pageNumber int) base.ElementPro
 	for k, v := range elementProps.ExtraAttributes {
 		newExtraAttributes[k] = v
 	}
-	newExtraAttributes["hx-get"] = fmt.Sprintf(newExtraAttributes["hx-get"].(string), pageNumber)
-
-
-	newHTMXAttributes := elementProps.HTMX
-	newHTMXAttributes.ReplaceURL =  fmt.Sprintf(elementProps.HTMX.ReplaceURL, pageNumber )
-
-	logrus.Infoln("SETTING NEW REPLACEURL", newHTMXAttributes.ReplaceURL)
-
+	newExtraAttributes["hx-get"] = fmt.Sprintf("%s%s", newExtraAttributes["hx-get"].(string), pp.ReconstructURL(pageNumber))
+ 
 	return base.ElementProps{
 		ExtraAttributes: newExtraAttributes,
-		HTMX: newHTMXAttributes,
+		HTMX: elementProps.HTMX,
 		IsDisabled: elementProps.IsDisabled,
 	}
 }
