--- a/pkg/components/pagination/pagination.templ
+++ b/pkg/components/pagination/pagination.templ
@@ -95,7 +95,7 @@ func (pp *PaginationProps) ReconstructURL(desiredPageNumber int) string {
 	if pp.BuildURLCallback == nil {
 		return fmt.Sprintf("%s?pagination=true&page=%d", pp.RootURL, desiredPageNumber)
 	}
-	return (*pp.BuildURLCallback)(desiredPageNumber)
+	return pp.RootURL + (*pp.BuildURLCallback)(desiredPageNumber)
 }
 
 func (pc *PaginationProps) IsPreviousButtonDisabled() bool { 
