--- a/pkg/components/pagination/pagination.templ
+++ b/pkg/components/pagination/pagination.templ
@@ -5,6 +5,7 @@ import (
 	"strings"
 	"fmt" 
 	"github.com/chrisbward/templstrap.io/pkg/components/pagination/paginationitem"
+	"github.com/sirupsen/logrus"
 )
 
 const RootClassName = "pagination"
@@ -133,6 +134,7 @@ func (pp PaginationProps) GetElementPropsForItem(pageNumber int) base.ElementPro
 			newExtraAttributes[k] = v
 		}
 		newExtraAttributes["hx-get"] = fmt.Sprintf("%s%s", pp.RootResultsURL, pp.ReconstructURL(pageNumber))
+		logrus.Infoln("hx-get", newExtraAttributes["hx-get"])
 	}
  
 	return base.ElementProps{
