--- a/pkg/components/pagination/paginationitem/paginationitem.templ
+++ b/pkg/components/pagination/paginationitem/paginationitem.templ
@@ -54,7 +54,7 @@ templ Show(props PaginationItemProps) {
         class={props.BuildClassName()}
     >
         <a 
-            class="page-link" 
+            class="page-link test" 
             href={ templ.SafeURL(props.BuiltURL) } 
             aria-label={ props.AriaLabel }
 			{ props.RebuildHTMXAttributes()... }
