--- a/pkg/components/breadcrumb/breadcrumb.templ
+++ b/pkg/components/breadcrumb/breadcrumb.templ
@@ -15,7 +15,7 @@ func (bcp BreadcrumbProps) GetBreadcrumbs() (BreadcrumbItems []breadcrumbitem.Br
 	var breadcrumbItem *breadcrumbitem.BreadcrumbItemProps
 	for iter, breadcrumbItemProps := range bcp.BreadcrumbItems {
 		breadcrumbItem = breadcrumbItemProps
-		if iter == len(bcp.BreadcrumbItems) -1 {
+		if iter == len(bcp.BreadcrumbItems)-1 {
 			breadcrumbItem.IsActive = true
 		}
 		BreadcrumbItems = append(BreadcrumbItems, *breadcrumbItem)
@@ -25,9 +25,9 @@ func (bcp BreadcrumbProps) GetBreadcrumbs() (BreadcrumbItems []breadcrumbitem.Br
 }
 
 templ Show(props BreadcrumbProps) {
-	<nav aria-label="breadcrumb">
+	<nav aria-label="breadcrumb" { props.HTMX.GetAttributes()... }>
 		<ol class="breadcrumb">
-			for _, breadcrumbItemProps := range props.GetBreadcrumbs() { 
+			for _, breadcrumbItemProps := range props.GetBreadcrumbs() {
 				@breadcrumbitem.Show(breadcrumbItemProps)
 			}
 		</ol>
