--- a/pkg/components/card/card.templ
+++ b/pkg/components/card/card.templ
@@ -1,9 +1,8 @@
 package card
 
 import (
-	"strings"
 	"github.com/chrisbward/templstrap.io/pkg/base"
-	// "github.com/chrisbward/templstrap.io/pkg/content/typography/heading"
+	"strings"
 )
 
 const CardTitleRootClassName = "card-title"
@@ -55,8 +54,9 @@ type CardProps struct {
 	Title    CardTitle
 	Text     CardText
 	ImageCap templ.Component
-	Footer templ.Component
+	Footer   templ.Component
 }
+
 func (cp CardProps) BuildClassNames() (classes string) {
 	classNames := []string{CardRootClassName}
 
@@ -72,8 +72,9 @@ func (cp CardProps) BuildClassNames() (classes string) {
 }
 
 templ Show(props CardProps) {
-	<div class={ props.BuildClassNames() }
-	 {props.ElementProps.DataAttributes...}
+	<div
+		class={ props.BuildClassNames() }
+		{ props.ElementProps.DataAttributes... }
 	>
 		if props.ImageCap != nil {
 			@props.ImageCap
@@ -84,10 +85,10 @@ templ Show(props CardProps) {
 				// 	HeadingClass: heading.HeadingClass("h5"),
 				// }) {
 				// }
-				<h5 class={ props.Title.BuildClassNames() }>{ props.Title.Text }</h5>
+				<h5 class={ props.Title.BuildClassNames() }>@templ.Raw(props.Title.Text)</h5>
 			}
 			if props.Text.Text != "" {
-				<p class={ props.Text.BuildClassNames() }>{ props.Text.Text }</p>
+				<p class={ props.Text.BuildClassNames() }>@templ.Raw(props.Text.Text)</p>
 			}
 			{ children... }
 		</div>
