using children spread correctly

--- a/pkg/forms/select/select.templ
+++ b/pkg/forms/select/select.templ
@@ -78,6 +78,6 @@ templ Show(props SelectProps) {
 				@selectoption.Show(*selectOptionProps)
 			}
 		}
-		@templ.GetChildren(ctx)
+		{ children... }
 	</select>
 }
